--- a/backend/package.json
+++ b/backend/package.json
@@ -13,31 +13,36 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "pre-commit": "npm run type-check && npm run test:run"
+    "pre-commit": "npm run type-check && npm run test:run",
+    "migrate": "NODE_OPTIONS='-r ts-node/register' knex migrate:latest --knexfile src/db/knexfile.ts",
+    "migrate:rollback": "NODE_OPTIONS='-r ts-node/register' knex migrate:rollback --knexfile src/db/knexfile.ts",
+    "migrate:make": "NODE_OPTIONS='-r ts-node/register' knex migrate:make --knexfile src/db/knexfile.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/knex": "^0.15.2",
     "bullmq": "^5.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "fast-json-patch": "^3.1.1",
-    "dotenv": "^16.3.1"
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
     "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "@vitest/coverage-v8": "^1.1.0",
     "eslint": "^8.56.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0"
+    "vitest": "^1.1.0"
   }
 }
-
