--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "pre-commit": "npm run type-check && npm run test:run",
