Update pre-commit hooks and testing configurations for backend and frontend
- Modified pre-commit hooks to run unit tests instead of general tests for both backend and frontend.
- Added new `test:unit` scripts to `package.json` for both backend and frontend, excluding integration tests.
- Updated Vitest configuration to include integration test files and exclude unnecessary directories.
- Removed outdated test files for auth routes and queue integration, streamlining the test suite.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:run": "vitest run",
+    "test:unit": "vitest run --exclude 'src/__tests__/integration/**'",
+    "test:integration": "vitest run src/__tests__/integration/",
     "test:coverage": "vitest run --coverage",
     "pre-commit": "npm run type-check && npm run test:run",
     "migrate": "NODE_OPTIONS='-r ts-node/register' knex migrate:latest --knexfile src/db/knexfile.ts",
