--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:run": "vitest run",
+    "test:unit": "vitest run --exclude 'src/__tests__/integration/**'",
+    "test:integration": "vitest run src/__tests__/integration/",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "pre-commit": "npm run type-check && npm run test:run"
