--- a/mother-theme/package.json
+++ b/mother-theme/package.json
@@ -25,10 +25,11 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/node": "^24.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@vitest/coverage-v8": "^1.1.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.1.0",
     "jsdom": "^23.0.1",
     "playwright": "^1.40.0",
     "typescript": "^5.3.3",
@@ -40,4 +41,3 @@
     "react-dom": "^18.2.0"
   }
 }
-
