Remove Style Guide components and related scripts
- Deleted the StyleGuide component and its associated files from the frontend, including the main entry point and configuration scripts.
- Removed related scripts from package.json to streamline the build process.
- Introduced new example components and configurations in the mother-theme to replace the functionality of the removed Style Guide, enhancing the overall component library.

--- a/mother-theme/package.json
+++ b/mother-theme/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "build": "tsc",
+    "examples": "vite --config vite.examples.config.ts",
+    "examples:build": "vite build --config vite.examples.config.ts",
     "test": "vitest run --no-watch",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
