--- a/mother-theme/package.json
+++ b/mother-theme/package.json
@@ -30,10 +30,12 @@
     "@types/node": "^24.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.1.0",
     "jsdom": "^23.0.1",
     "playwright": "^1.40.0",
+    "react-router-dom": "^7.9.5",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.1.0"
