--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,7 @@
     "axios": "^1.6.5",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
-    "react-chrono": "^3.0.0",
-    "react-dom": "^18.2.0",
-    "rsuite": "^5.83.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
