Add Categories feature and update component imports
- Introduced a new CategoriesView component to display and filter seeds by category, enhancing user navigation and organization.
- Updated app routing to include categories API endpoint.
- Refactored component imports to utilize the new '@mother' alias for improved clarity and maintainability.
- Enhanced existing views (SeedDetailView, SeedsView, TimelineView, etc.) to use components from the '@mother' library, ensuring consistency across the application.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,7 +22,8 @@
     "types": ["vitest/globals", "@testing-library/jest-dom"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@mother/*": ["../mother-theme/src/*"]
     }
   },
   "include": ["src"],
