--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.6.5",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
