Refactor Docker and initialization scripts for PostgreSQL 16 and Redis 7 integration
- Removed supervisord installation from Dockerfiles to streamline container setup.
- Updated Docker Compose configuration to include health checks for PostgreSQL and Redis services.
- Enhanced initialization script to handle PostgreSQL 14 data migration and ensure correct permissions for data directories.
- Adjusted environment variable configurations for database connections in development settings.
- Introduced a new ModelSelector component in the frontend for improved model selection UI.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,31 +1,63 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:16
+    container_name: memoriae-postgres-dev
+    environment:
+      POSTGRES_USER: memoriae
+      POSTGRES_PASSWORD: memoriae
+      POSTGRES_DB: memoriae
+    ports:
+      - "5432:5432"
+    volumes:
+      - memoriae-postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U memoriae"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: memoriae-redis-dev
+    ports:
+      - "6379:6379"
+    volumes:
+      - memoriae-redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    restart: unless-stopped
+
   memoriae-dev:
     build:
       context: .
       dockerfile: Dockerfile.dev
     container_name: memoriae-dev
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - "3000:3000"   # Backend API
       - "5173:5173"   # Frontend Vite dev server
       - "9229:9229"   # Node.js debugging
-      - "5432:5432"   # PostgreSQL (optional, for external access)
-      - "6379:6379"   # Redis (optional, for external access)
     volumes:
       # Mount source code for hot reload
       - ./backend:/app/backend:rw
       - ./frontend:/app/frontend:rw
-      # Persist database and Redis data
-      - memoriae-postgres-data:/var/lib/postgresql/16/main
-      - memoriae-redis-data:/var/lib/redis
       # Exclude node_modules from volume mount (use container's node_modules)
       - /app/backend/node_modules
       - /app/frontend/node_modules
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgresql://memoriae:memoriae@localhost:5432/memoriae
-      - REDIS_URL=redis://localhost:6379
+      - DATABASE_URL=postgresql://memoriae:memoriae@postgres:5432/memoriae
+      - REDIS_URL=redis://redis:6379
       - PORT=3000
       # Add your environment variables here
       - JWT_SECRET=${JWT_SECRET:-dev-secret-change-in-production}
