--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -53,9 +53,10 @@ environment=DATABASE_URL="postgresql://memoriae:memoriae@localhost:5432/memoriae
 command=/usr/bin/node /app/backend/dist/index.js
 directory=/app/backend
 user=root
-autostart=true
+autostart=false
 autorestart=true
 priority=30
+startsecs=0
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
