--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "fast-json-patch": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "luxon": "^3.7.2",
     "pg": "^8.11.3",
     "uuid": "^13.0.0"
   },
@@ -41,6 +42,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20.10.6",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^6.0.3",
