--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "pre-commit": "npm run type-check && npm run test:run"
   },
   "dependencies": {
+    "@headless-tree/core": "^1.5.1",
+    "@headless-tree/react": "^1.5.1",
     "axios": "^1.6.5",
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
