--- a/mother-theme/tsconfig.json
+++ b/mother-theme/tsconfig.json
@@ -26,6 +26,6 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.test.tsx", "src/**/*.spec.tsx", "src/test"]
 }
 
