Add environment configuration and update build scripts for Docker integration
- Introduced a new `.env.example` file to provide a template for environment variables required for the Memoriae application.
- Updated Dockerfiles and docker-compose configurations to reflect changes in port settings and environment variable handling.
- Removed obsolete build and run scripts, streamlining the development setup process.
- Enhanced the frontend and backend configurations to ensure compatibility with the new environment variable structure.
- Added new scripts for building and publishing Docker images, improving the CI/CD workflow.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Memoriae Backend Environment Variables
+# Memoriae Environment Variables
 # Copy this file to .env and fill in your actual values
 # DO NOT commit .env to version control
 
@@ -7,7 +7,7 @@
 # =============================================================================
 
 # Port the backend server will listen on
-PORT=3000
+PORT=3123
 
 # =============================================================================
 # Database Configuration
@@ -18,15 +18,15 @@ PORT=3000
 # Example for AWS RDS:
 # DATABASE_URL=postgresql://postgres:your_password@memoriae-db.xxxxx.us-east-1.rds.amazonaws.com:5432/postgres
 # Example for local development:
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/memoriae
+DATABASE_URL=postgresql://memoriae:memoriae@localhost:5432/memoriae
 
 # Option 2: Use individual database connection variables (alternative to DATABASE_URL)
 # If DATABASE_URL is not set, these will be used instead
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=memoriae
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=memoriae
+DB_PASSWORD=memoriae
 
 # =============================================================================
 # Authentication & Security
@@ -52,9 +52,9 @@ OAUTH_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 # Google OAuth Client Secret
 OAUTH_GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Google OAuth redirect URI (default: http://localhost:3000/api/auth/google/callback)
+# Google OAuth redirect URI (default: http://localhost:3123/api/auth/google/callback)
 # Update this if your backend is hosted at a different URL
-OAUTH_GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
+OAUTH_GOOGLE_REDIRECT_URI=http://localhost:3123/api/auth/google/callback
 
 # =============================================================================
 # OAuth Configuration - GitHub
@@ -67,9 +67,9 @@ OAUTH_GITHUB_CLIENT_ID=your-github-client-id
 # GitHub OAuth Client Secret
 OAUTH_GITHUB_CLIENT_SECRET=your-github-client-secret
 
-# GitHub OAuth redirect URI (default: http://localhost:3000/api/auth/github/callback)
+# GitHub OAuth redirect URI (default: http://localhost:3123/api/auth/github/callback)
 # Update this if your backend is hosted at a different URL
-OAUTH_GITHUB_REDIRECT_URI=http://localhost:3000/api/auth/github/callback
+OAUTH_GITHUB_REDIRECT_URI=http://localhost:3123/api/auth/github/callback
 
 # =============================================================================
 # Frontend Configuration
@@ -78,6 +78,16 @@ OAUTH_GITHUB_REDIRECT_URI=http://localhost:3000/api/auth/github/callback
 # Frontend URL for CORS and OAuth redirects
 # Update this in production to your actual frontend URL
 FRONTEND_URL=http://localhost:5173
+
+# Comma-separated list of allowed origins for CORS (optional)
+# If not set, defaults to FRONTEND_URL
+# FRONTEND_ALLOWED_ORIGINS=http://localhost:5173,https://memoriae.example.com
+
+# Frontend API URL (for Vite - must have VITE_ prefix)
+# Default: http://localhost:3123/api (for local development)
+# Update this in production to your actual backend URL
+# Example for production: https://api.memoriae.example.com/api
+VITE_API_URL=http://localhost:3123/api
 
 # =============================================================================
 # Redis Configuration
@@ -100,6 +110,9 @@ REDIS_URL=redis://localhost:6379
 # Users provide their own API keys in the application settings
 OPENROUTER_API_URL=https://openrouter.ai/api/v1
 
+# OpenRouter API Key (optional - users can set their own in app settings)
+# OPENROUTER_API_KEY=your-openrouter-api-key
+
 # =============================================================================
 # Queue Configuration
 # =============================================================================
@@ -107,6 +120,22 @@ OPENROUTER_API_URL=https://openrouter.ai/api/v1
 # Interval in milliseconds to check for pressure points that need processing
 # Default: 30000 (30 seconds)
 QUEUE_CHECK_INTERVAL=30000
+
+# =============================================================================
+# Idea Musing Configuration
+# =============================================================================
+
+# Time to schedule idea musings (UTC, 24-hour format)
+# Default: 02:00 (2 AM UTC)
+IDEA_MUSING_SCHEDULE_TIME=02:00
+
+# Maximum number of musings to generate per day
+# Default: 10
+IDEA_MUSING_MAX_PER_DAY=10
+
+# Number of days to exclude seeds that were recently shown
+# Default: 2
+IDEA_MUSING_EXCLUDE_DAYS=2
 
 # =============================================================================
 # Environment
