--- a/docker/supervisord.dev.conf
+++ b/docker/supervisord.dev.conf
@@ -53,7 +53,7 @@ environment=DATABASE_URL="postgresql://memoriae:memoriae@localhost:5432/memoriae
 command=/usr/bin/npm run dev
 directory=/app/backend
 user=root
-autostart=false
+autostart=true
 autorestart=true
 priority=30
 startsecs=0
@@ -61,7 +61,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-environment=NODE_ENV="development",DATABASE_URL="postgresql://memoriae:memoriae@localhost:5432/memoriae",REDIS_URL="redis://localhost:6379",PORT="3000"
+environment=NODE_ENV="development",NODE_OPTIONS="--inspect=0.0.0.0:9229",DATABASE_URL="postgresql://memoriae:memoriae@localhost:5432/memoriae",REDIS_URL="redis://localhost:6379",PORT="3123"
 
 [program:frontend]
 command=/usr/bin/npm run dev
