--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Memoriae - Memory and note-taking application",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "node -e \"const fs = require('fs'); const path = require('path'); const { execSync } = require('child_process'); const isWin = process.platform === 'win32'; const huskyBin = isWin ? 'husky.cmd' : 'husky'; const huskyPath = path.join(__dirname, 'node_modules', '.bin', huskyBin); if (fs.existsSync(huskyPath)) { execSync((isWin ? '' : 'node ') + huskyPath + ' install', { stdio: 'inherit', cwd: __dirname }); }\"",
     "dev": "./docker/scripts/dev.sh",
     "install-docker": "./docker/scripts/install-docker.sh",
     "build": "cd mother-theme && npm run build && cd ../backend && npm run build && cd ../frontend && npm run build",
