--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -23,6 +23,8 @@ services:
       start_period: 40s
 
   postgres:
+    env_file:
+      - ../.env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
