Refactor Dockerfiles for production and development environments
- Updated the production Dockerfile to use a Node.js base image and removed PostgreSQL and Redis installations, as they are managed via docker-compose.
- Simplified the development Dockerfile by removing unnecessary installations and configurations, focusing on Node.js and source code setup.
- Enhanced the run-migrations.sh script to support dynamic database connection details from environment variables, improving flexibility for migrations.
- Added health checks and streamlined commands for running the backend server in both Dockerfiles.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,52 +1,16 @@
 # syntax=docker/dockerfile:1
-FROM ubuntu:24.04
+# Production Dockerfile for Memoriae
+# This image only contains the Node.js application
+# PostgreSQL and Redis are run as separate services in docker-compose
 
-# Prevent interactive prompts during package installation
-ENV DEBIAN_FRONTEND=noninteractive
+FROM node:22-slim
 
-# Install system dependencies and build tools
+# Install curl for health checks
 RUN apt-get update && apt-get install -y \
     curl \
-    wget \
-    gnupg2 \
-    ca-certificates \
-    lsb-release \
-    software-properties-common \
-    build-essential \
-    python3 \
-    python3-pip \
-    supervisor \
-    sudo \
     && rm -rf /var/lib/apt/lists/*
 
-# Install PostgreSQL 16 from official PostgreSQL repository
-RUN curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /usr/share/keyrings/postgresql-keyring.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/postgresql-keyring.gpg] http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
-    && apt-get update \
-    && apt-get install -y postgresql-16 postgresql-contrib-16 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Redis 7.x from official Redis repository
-RUN curl -fsSL https://packages.redis.io/gpg | gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main" > /etc/apt/sources.list.d/redis.list \
-    && apt-get update \
-    && apt-get install -y redis \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Node.js 22 LTS from NodeSource
-RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
-    && apt-get install -y nodejs
-
-# Set up PostgreSQL
-RUN service postgresql stop || true
-RUN mkdir -p /var/lib/postgresql/16/main
-RUN chown -R postgres:postgres /var/lib/postgresql/16/main
-
-# Set up Redis
-RUN mkdir -p /var/lib/redis
-RUN chown -R redis:redis /var/lib/redis
-
-# Create application directory
+# Create app directory
 WORKDIR /app
 
 # Copy root package files (for workspace setup)
@@ -56,10 +20,9 @@ COPY backend/package*.json ./backend/
 COPY frontend/package*.json ./frontend/
 
 # Install all dependencies from root (workspace setup)
-RUN npm ci
+RUN npm ci --omit=dev
 
 # Copy backend source
-WORKDIR /app
 COPY backend/ ./backend/
 
 # Build backend
@@ -71,43 +34,21 @@ WORKDIR /app
 COPY mother-theme/ ./mother-theme/
 
 # Copy frontend source
-WORKDIR /app
 COPY frontend/ ./frontend/
 
 # Build frontend
 WORKDIR /app/frontend
 RUN npm run build
 
-# Copy supervisord configuration
-COPY docker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+# Set working directory to backend for runtime
+WORKDIR /app/backend
 
-# Copy initialization script
-COPY docker/init.sh /init.sh
-RUN chmod +x /init.sh
+# Expose backend port
+EXPOSE 3123
 
-# Copy migration runner script
-COPY docker/run-migrations.sh /run-migrations.sh
-RUN chmod +x /run-migrations.sh
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:3123/api/health || exit 1
 
-# Create necessary directories
-RUN mkdir -p /var/log/supervisor \
-    && mkdir -p /var/run/postgresql \
-    && mkdir -p /var/lib/postgresql/16/main \
-    && mkdir -p /var/lib/redis
-
-# Set up PostgreSQL data directory permissions
-RUN chown -R postgres:postgres /var/lib/postgresql/16/main \
-    && chown -R postgres:postgres /var/run/postgresql
-
-# Set up Redis data directory permissions
-RUN chown -R redis:redis /var/lib/redis
-
-# Expose ports
-EXPOSE 3123 5432 6379
-
-# Set entrypoint
-ENTRYPOINT ["/init.sh"]
-
-# Default command (supervisord will be started by init.sh)
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf", "-n"]
-
+# Run the backend server
+CMD ["node", "dist/index.js"]
