--- a/docker/supervisord.dev.conf
+++ b/docker/supervisord.dev.conf
@@ -50,8 +50,7 @@ stderr_logfile_maxbytes=0
 environment=DATABASE_URL="postgresql://memoriae:memoriae@localhost:5432/memoriae",NODE_ENV="development"
 
 [program:backend]
-command=/usr/bin/npm run dev
-directory=/app/backend
+command=/start-backend.sh
 user=root
 autostart=true
 autorestart=true
