Update PostgreSQL configuration and add custom entrypoint scripts
- Enhanced Docker setup by adding a custom entrypoint script to configure pg_hba.conf for network connections, allowing access from Docker/Podman networks.
- Introduced an initialization script to ensure PostgreSQL is ready before modifying the configuration.
- Updated docker-compose.yml to utilize the new entrypoint and added necessary environment variables for secure authentication.
- Made minor adjustments across various files to maintain consistency and improve code structure.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,10 +6,17 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-memoriae}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-memoriae}
       POSTGRES_DB: ${POSTGRES_DB:-memoriae}
+      # Allow connections from Docker/Podman networks
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - memoriae-postgres-data:/var/lib/postgresql/data
+      - ./postgres-entrypoint.sh:/usr/local/bin/custom-entrypoint.sh:ro
+    # Use custom entrypoint that configures pg_hba.conf
+    entrypoint: ["/usr/local/bin/custom-entrypoint.sh"]
+    # Configure PostgreSQL to listen on all addresses (not just localhost)
+    command: ["postgres", "-c", "listen_addresses=*"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-memoriae}"]
       interval: 10s
